--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مصطفى المومري - الصفحة الرسمية</title>
+    <title>مصطفى المومري - Mustafa Al-Momari</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
@@ -242,6 +242,7 @@
             animation: fadeIn 1s ease-out;
         }
     </style>
+    
 </head>
 <body>
     <button class="theme-toggle animate-fade" onclick="toggleDarkMode()">🌓</button>
@@ -258,14 +259,15 @@
             <h2 data-i18n="about">عن مصطفى</h2>
             <p data-i18n="bio">مصطفى المومري هو يوتيوبر يمني شهير يتابعه أكثر من مليوني مشترك. بدأ مسيرته بمقاطع فيديو ساخرة ثم تحول لمناقشة القضايا الاجتماعية والسياسية، مع التركيز على انتقاد الفساد في اليمن. تعرض للاعتقال بسبب انتقاداته الجريئة للحكومة، ويشارك أيضًا في دعم القضايا العربية مثل القضية الفلسطينية.</p>
         </section>
-
-        <div class="social-links animate-fade">
-            <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-        </div>
-
+<div class="social-links animate-fade">
+    <a href="https://youtube.com/@maostfa" target="_blank"><i class="fab fa-youtube"></i></a>
+    <a href="https://maostfa-almwry.trend-vip.com" target="_blank"><i class="fab fa-twitter"></i></a>
+    <a href="https://www.instagram.com/mus_tafaalmomari" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.facebook.com/profile.php?id=61553905087311" target="_blank"><i class="fab fa-facebook"></i></a>
+    <a href="https://www.snapchat.com/add/hamod_9576" target="_blank"><i class="fab fa-snapchat"></i></a>
+    <a href="https://maostfa-almwry.trend-vip.com" target="_blank"><i class="fab fa-google-play"></i></a>
+    <a href="https://kooora.trend-vip.com" target="_blank"><i class="fas fa-futbol"></i></a>
+</div>
         <section class="crypto-donations">
             <h2 data-i18n="donate" class="animate-fade">الدعم المادي</h2>
             <div class="crypto-grid" id="cryptoGrid"></div>
@@ -414,5 +416,7 @@
 
         window.onload = generateCryptoCards;
     </script>
+</body>
+</html>   </script>
 </body>
 </html>
